--- a/css/page/04Service/_service.scss
+++ b/css/page/04Service/_service.scss
@@ -58,6 +58,7 @@
       }
 
       &-contents {
+        width: calc(100% / 3);
         padding: 10px;
         border-right: 1px solid #EAEAEA;
         @include sp {
