--- a/css/page/04Service/_service.scss
+++ b/css/page/04Service/_service.scss
@@ -62,6 +62,7 @@
         padding: 10px;
         border-right: 1px solid #EAEAEA;
         @include sp {
+          width: 100%;
           border-right: none;
           border-bottom: 1px solid #EAEAEA;
         }
