--- a/css/mixin/_header.scss
+++ b/css/mixin/_header.scss
@@ -1,6 +1,6 @@
 // //・・・・・・・ ヘッダー設定・・・・・・・
 @mixin header {
-  display: inline-block;
+  display: block;
   text-align: center;
   height: 50px;
   line-height: 50px;
