safari でモーダル背景が固定されない→scrollをoverflow-yからoverflow

--- a/css/page/05Work/_work.scss
+++ b/css/page/05Work/_work.scss
@@ -79,7 +79,7 @@
   top: 0;
   left: 0;
   background: rgba(0,0,0,0.5);
-  overflow-y: auto;
+  overflow: auto;
   -webkit-overflow-scrolling: touch;
   z-index: 100;
 }
