--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@ body {
 }
 
 .no_scroll {
-  overflow-y: hidden;
+  overflow: hidden;
 }
 
 /* バウンススクロール時のカラースタイル */
@@ -982,7 +982,7 @@ body::before {
   top: 0;
   left: 0;
   background: rgba(0, 0, 0, 0.5);
-  overflow-y: auto;
+  overflow: auto;
   -webkit-overflow-scrolling: touch;
   z-index: 100;
 }
