--- a/css/page/07Contact/_contact.scss
+++ b/css/page/07Contact/_contact.scss
@@ -17,18 +17,6 @@
     width: 100%;
     max-width: 1000px;
     margin: 0 auto;
-
-    @include pc {
-    display: flex;
-    align-items: center;
-      &-left {
-        width: 50%;
-        }
-      &-right {
-        width: 50%;
-        height: 100%;
-        }
-      }
     }
 
 
@@ -45,32 +33,54 @@
   }
 
   .inputs {
-    width: 100%;
+    width: 65%;
     @include pc {
-      width: 90%;
+      @include fontsize(16);
+    }
+    @include tab {
+      @include fontsize(16);
     }
     padding: 1rem;
-    margin-top: .5rem;
+    margin: 1rem 0 2rem;
     border: none;
     border-bottom: 1px solid #333333;
     background: #F7F7F7;
-    @include fontsize(16);
 
     &:focus {
       outline: none;
       box-shadow: 0 3px 3px #7a7979;
     }
   }
+  .inputs-name {
+    @include pc {
+      width: 30%;
+      @include fontsize(16);
+    }
+    @include tab {
+      width: 30%;
+      @include fontsize(16);
+    }
+    @include sp {
+      width: 30%;
+    }
+    margin: 1rem 2rem 2rem 0;
+    padding: 1rem;
+    border: none;
+    border-bottom: 1px solid #333333;
+    background: #F7F7F7;
+
+    &:focus {
+      outline: none;
+      box-shadow: 0 3px 3px #7a7979;
+    }
+  }
+
   .textarea {
     width: 100%;
     height: 8rem;
-    @include pc {
-      height: 20rem;
-    }
     margin-top: 1rem;
     border: 1px solid #333333;
     background: #F7F7F7;
-    @include fontsize(16);
 
     &:focus {
       outline: none;
