--- a/css/main.scss
+++ b/css/main.scss
@@ -28,3 +28,4 @@
 @import "./page/06Price/_price";
 @import "./page/07Contact/_contact";
 @import "./page/08Footer/_footer";
+@import "./page/09Blog/_blog";
