--- a/css/mixin/_background.scss
+++ b/css/mixin/_background.scss
@@ -4,7 +4,7 @@
   color: $color;
 }
 
-@mixin black ($background: #7a7979 , $color: #EAEAEA, $width: 100vw){
+@mixin black ($background: #3e3e3e , $color: #EAEAEA, $width: 100vw){
   background: $background;
   color: $color;
 }
