--- a/css/page/01TopVisual/_topvisual.scss
+++ b/css/page/01TopVisual/_topvisual.scss
@@ -72,7 +72,7 @@
       height: 0;
       border-style: solid;
       border-width: 100vh 100vw 0 0;
-      border-color: #333 transparent transparent transparent;
+      border-color: #3e3e3e transparent transparent transparent;
       animation: SpfadeInBack 4s ease-in 0s 1 normal;
       -webkit-animation: SpfadeInBack 4s ease-in 0s 1 normal;
       @include SpfadeInBack;
@@ -83,7 +83,7 @@
       left: 0;
       width: 50%;
       height: 55%;
-      background: #333;
+      background: #3e3e3e;
       animation: LeftfadeInBack 4s ease-in 0s 1 normal;
       -webkit-animation: LeftfadeInBack 4s ease-in 0s 1 normal;
       @include LeftTopkey;
@@ -94,7 +94,7 @@
       left: 0;
       width: 50%;
       height: 55%;
-      background: #333;
+      background: #3e3e3e;
       animation: LeftfadeInBack 4s ease-in 0s 1 normal;
       -webkit-animation: LeftfadeInBack 4s ease-in 0s 1 normal;
       @include LeftTopkey;
@@ -112,7 +112,7 @@
       right: 0;
       width: 80%;
       height: 10%;
-      background: #333;
+      background: #3e3e3e;
       @include RightTopkey;
     }
 
@@ -121,7 +121,7 @@
       right: 0;
       width: 80%;
       height: 10%;
-      background: #333;
+      background: #3e3e3e;
       @include RightTopkey;
     }
   }
