初回コミット

--- a/css/main.css
+++ b/css/main.css
@@ -1036,7 +1036,7 @@ body::before {
   line-height: 1.5;
   color: #F7F7F7;
 }
-
+/*  */
 .modal-window__text a {
   color: #F7F7F7;
   text-decoration: underline;
